<resources>
    <string name="app_name">BITI G1 Attendance</string>
    <string name="label_accountID">Account ID:</string>
    <string name="label_password">Password:</string>
    <string name="label_submit">Submit</string>
    <string name="label_class">Class:</string>
    <string name="label_start_date_and_time">Start date and time:</string>
    <string name="label_duration">Duration:</string>
    <string name="label_this_is_student_menu_activity">This is Student Menu Activity</string>
    <string name="lecturer_main">Lecturer Main</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="settings">settings</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_lecturer_main" translatable="false">title_activity_lecturer_main</string>
    <string name="menu_gallery" />
    <string name="menu_home" />
    <string name="menu_slideshow" />
    <string name="nav_header_desc" translatable="false" />
    <string name="nav_header_title" translatable="false" />
    <string name="nav_header_subtitle" translatable="false" />
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!--    <string name=""/>-->
</resources>